--- a/index.html
+++ b/index.html
@@ -391,9 +391,21 @@
             <div class="flexbox">
               <h2>Новини</h2>
               <div class="newsBg">
-                <img class="flower1" src="./img/news/flower1.png" alt="" />
-                <img class="flower2" src="./img/news/flower2.png" alt="" />
-                <img class="flower3" src="./img/news/flower3.png" alt="" />
+                <img
+                  class="flower1"
+                  src="./img/news/flower1.png"
+                  alt="flower1"
+                />
+                <img
+                  class="flower2"
+                  src="./img/news/flower2.png"
+                  alt="flower2"
+                />
+                <img
+                  class="flower3"
+                  src="./img/news/flower3.png"
+                  alt="flower3"
+                />
               </div>
               <div class="newsSliderBox">
                 <div class="slider">
